--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
   "private": true,
   "description": "Create React App with Express API and Postgres in Heroku",
   "scripts": {
-    "postinstall":
-      "npm --prefix react-ui install && npm --prefix server install",
-    "start:dev":
-      "concurrently 'npm run --prefix react-ui start' 'npm run --prefix server start'",
+    "postinstall": "npm --prefix react-ui install && npm --prefix server install",
+    "start:dev": "concurrently 'npm run --prefix react-ui start' 'npm run --prefix server start'",
     "heroku-postbuild": "npm run --prefix react-ui build",
     "start": "cd server && NODE_ENV=production node server.js"
   },
-  "author": "Ari Autio <ari.autio@iki.fi>",
-  "license": "MIT",
+  "author": "Amy Tai",
+  "license": "",
   "devDependencies": {
-    "concurrently": "^3.5.0"
+    "concurrently": "^3.6.1"
   },
   "cacheDirectories": [
     "node_modules",
     "react-ui/node_modules",
     "server/node_modules"
-  ]
+  ],
+  "dependencies": {
+  }
 }
