--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
+# dependencies
 node_modules
+react-ui/node_modules
+server/node_modules
+
+# testing
+/react-ui/coverage
+
+# production
+/react-ui/build
+
+# environment variables
+react-ui/.DS_Store
+react-ui/.env.local
+react-ui/.env.development.local
+react-ui/.env.test.local
+react-ui/.env.production.local
+
+server/.env
+
+# misc
+react-ui/npm-debug.log*
+react-ui/yarn-debug.log*
+react-ui/yarn-error.log*
