--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "node_modules",
     "react-ui/node_modules",
     "server/node_modules"
-  ]
+  ],
+  "dependencies": {
+    "node-sass": "^4.14.1",
+    "react-grid-system": "^7.1.1",
+    "react-router-dom": "^5.2.0"
+  }
 }
