--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-grid-system": "^7.1.1",
     "react-scripts": "1.0.14"
   },
   "scripts": {
@@ -13,5 +15,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:4000",
+  "devDependencies": {
+    "node-sass": "^4.14.1",
+    "react-grid-system": "^7.1.1",
+    "react-router-dom": "^5.2.0"
+  }
 }
